--- a/src/app/app.sass
+++ b/src/app/app.sass
@@ -8,5 +8,6 @@
   .content
     text-align: center        // centraliza texto dentro da div
     font-size: 1.5rem
-    color: #000000ff
+    color: #ff0000ff
     font-family: Arial
+    background-color: #141414
